fix: add dual binary names for better NPX compatibility
- Add both 'zora-coins-mcp-server' and 'zora-coins-mcp' as binary names
- Make 'npx zora-coins-mcp' the primary recommended usage
- Update all documentation to use simpler NPX syntax
- Fix MCP client integration examples for Claude Desktop and Cursor
- Users can now use either 'npx zora-coins-mcp' or 'npx zora-coins-mcp-server'

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "bin": {
+    "zora-coins-mcp-server": "dist/index.js",
     "zora-coins-mcp": "dist/index.js"
   },
   "files": [
